developer/src/kmc-kmn/test/fixtures/invalid-keyboards/error_contextex_has_invalid_offset_zero.kmn
store(&TARGETS) 'any'

begin Unicode > use(main)

store(cons) 'bcd'

group(main) using keys

c ERROR_ContextExHasInvalidOffset: `context(0)` is lower than 1
any(cons) + 'a' > 'x' context(0) 'z'

